# Autonomous_AI_Influencers_Digital_Entities

./: .coderabbit.yaml  .gitignore  CONTRIBUTING.md  Dockerfile  Makefile  README.md  ROADMAP.md  pyproject.toml
.cursor/: README.md  rules
.github/workflows/: main.yml  release.yml
docs/: AI_REVIEW_POLICY.md  LOOM_SCRIPT.md  SECURITY_AND_ACCEPTANCE.md
research/: tooling_strategy.md
skills/: README.md  skill_download_youtube.md  skill_publish_social.md  skill_transcribe_audio.md
skills/impl/: __init__.py  skill_download_youtube.py  skill_publish_social.py  skill_transcribe_audio.py
specs/: _meta.md  frontend.md  functional.md  openclaw_integration.md  technical.md
tests/: test_demo_failing.py  test_skills_interface.py  test_skills_realistic.py
